# active-active-db

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.redis.yml  docker-compose.yml  install.sh
.github/workflows/: ci.yml  release.yml
benchmark-results/: COMPARISON.md
config/: bench-persist.toml  discovery-cluster.toml  discovery-example.toml  discovery-node1.toml  discovery-node2.toml  discovery-node3.toml  example.toml  replica1.toml  replica2.toml  replica3.toml  single-node.toml
crates/a2db-core/: Cargo.toml
crates/a2db-core/src/: delta.rs  gcounter.rs  store.rs
crates/a2db-proto/: Cargo.toml  build.rs
crates/a2db-server/: Cargo.toml
crates/a2db-server/src/: client_service.rs  config.rs  expiration.rs  gossip.rs  main.rs  metrics.rs  peer_manager.rs  persistence.rs  redis_protocol.rs  replication_client.rs  replication_service.rs
crates/counter-core/: Cargo.toml
crates/counter-core/src/: delta.rs  gcounter.rs  lib.rs  lww_register.rs  snapshot.rs  store.rs
crates/counter-proto/: Cargo.toml
crates/counter-proto/src/: lib.rs
crates/counter-server/: Cargo.toml
crates/counter-server/src/: client_service.rs  config.rs  expiration.rs  main.rs  persistence.rs  redis_protocol.rs  replication_client.rs  replication_service.rs
proto/: counter.proto  replication.proto
scripts/: benchmark.sh  test-discovery.sh
