[package]
name = "a2db-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "gRPC server for active-active database"

[dependencies]
a2db-core = { path = "../a2db-core" }
a2db-proto = { path = "../a2db-proto" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json = "1"
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[[bin]]
name = "a2db"
path = "src/main.rs"

[[bin]]
name = "a2db-cli"
path = "src/bin/a2db-cli.rs"
