[package]
name = "counter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core CRDT logic for active-active counter store"

[dependencies]
serde = { workspace = true, features = ["rc"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
smallvec = { version = "1.13", features = ["serde"] }

[dev-dependencies]
proptest.workspace = true
