[package]
name = "counter-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "gRPC server for active-active counter store"

[dependencies]
counter-core = { path = "../counter-core" }
counter-proto = { path = "../counter-proto" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[[bin]]
name = "counter-server"
path = "src/main.rs"

[[bin]]
name = "counter-cli"
path = "src/bin/counter-cli.rs"
